--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -821,37 +821,31 @@
 		</div>
 	</div>
 
+	<!-- 廣告輪播 課程 -->
+	<!-- 要把jquery的物件可能要塞回來 -->
+	<!-- 縮小到一定尺寸 RWD就壞掉了 -->
+	<div
+		class="rbt-splash-testimonial-area bg-color-white overflow-hidden position-relative">
+		<div class=" pt--90">
+			<div class="scroll-animation-wrapper no-overlay mt--50">
+				<div class="scroll-animation scroll-right-left">
 
-近期熱門課程 -->
-        <!-- 近期熱門課程 標題-->
-        <div class="wrapper">
-            <div class="post">
-                <h1>近期熱門課程
-                </h1>
-                <p>每週真誠推薦</p>
-            </div>
-            <a class="coach_index" th:href="@{course/coach_dashboard}" style="text-align:center;justify-content: center" >教練主頁入口</a>
-            <a class="test_index" th:href="@{course/test}" style="text-align:center;justify-content: center" >測試</a>
-        </div>
 					<div th:each="ad : ${ads}"
 						class="single-column-20 bg-theme-gradient-odd"
 						style="background-size: contain;">
-						<div class="rbt-testimonial-box style-2" style="width: 470px; height: 450px;
-																		background-size: contain; background-repeat: no-repeat;
-    																	background-position: center center;">
+						<div class="rbt-testimonial-box style-2"
+							style="width: 470px; height: 450px; background-size: contain; background-repeat: no-repeat; background-position: center center;">
 							<div class="img-test">
 								<!-- 使用Thymeleaf設置圖片的src -->
-								<img th:src="@{/adCarousel/DBGifReader(adcId=${ad.adcId})}" style="width: 470px; height: 450px;" />
+								<img th:src="@{/adCarousel/DBGifReader(adcId=${ad.adcId})}"
+									style="width: 470px; height: 450px;" />
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<!-- 廣告輪播 課程 結束 -->
 
 	<!-- 近期熱門課程 -->
@@ -864,7 +858,6 @@
 		<a class="coach_index" th:href="@{course/coach_dashboard}"
 			style="text-align: center; justify-content: center">教練主頁入口</a>
 	</div>
-
 
 
 	<div class="row content-width">
@@ -1151,7 +1144,7 @@
 			</div>
 		</div>
 
-<footer th:replace="front-end/footer.html"></footer>
+
 		<!--                             <span class="team-form"> -->
 		<!--                                 <span class="location">By 莫舒涵</span> -->
 		<!--                             </span> -->
