--- a/src/main/resources/templates/front-end/included_mail.html
+++ b/src/main/resources/templates/front-end/included_mail.html
@@ -3,10 +3,10 @@
 		<article>
 			<div class="article-inner-wrapper">
 				<h1>意見回饋</h1>
-				<div class="feed-back-row1">
+				<!-- <div class="feed-back-row1">
 					<p>暱稱</p>
 					<input type="text" value="" disabled>
-				</div>
+				</div> -->
 				<div class="feed-back-row2">
 					<p>主旨</p>
 					<input type="text" placeholder="請輸入意見標題(15字內)" maxlength="80">
