--- a/src/main/resources/templates/front-end/ad/instructor_advertising.html
+++ b/src/main/resources/templates/front-end/ad/instructor_advertising.html
@@ -2642,7 +2642,7 @@
                                                 </div>
                                             </div>
 
-                                            <!-- 												假裝先寫死 -->
+                                            <!-- 假裝先寫死 -->
                                             <input type="hidden" id="uId" value="10002">
 
 
@@ -2681,9 +2681,8 @@
                                             <input type="hidden" id="totalPriceField" name="totalPrice" value="">
                                             <div class="col-12 mt--20">
                                                 <div class="rbt-form-group">
-                                                    <!--                                                         <a class="rbt-btn btn-gradient" href="#">送出輪播訂單</a> -->
                                                     <button id="orderbutton" class="rbt-btn btn-gradient"
-                                                        type="submit"  onclick="return validateForm();">送出首頁訂單</button>
+                                                        type="submit">送出首頁訂單</button>
                                                 </div>
                                             </div>
                                             <span></span>
